--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -8,7 +8,7 @@
         <header>
             <h2>Hi. Welcome to <strong>Sule Studios</strong>.</h2>
             <p>
-                A (free) responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
+                A responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
                 Built with HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
             </p>
         </header>
